@@ -48,16 +48,13 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ['3.5', '3.6', '3.7']
+        python-version: ['3.6', '3.7']
 
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - if: ${{ matrix.python-version == '3.5' }}
-      run: |
-        sed -i '/^black/d' requirements-test.txt
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
