@@ -30,7 +30,6 @@ setuptools.setup(
         "Intended Audience :: Developers",
         "Framework :: AsyncIO",
         "License :: OSI Approved :: MIT License",
-        "Programming Language :: Python :: 3.5",
         "Programming Language :: Python :: 3.6",
         "Programming Language :: Python :: 3.7",
         "Programming Language :: Python :: 3.8",
@@ -41,7 +40,7 @@ setuptools.setup(
     package_data={"asyncio_dgram": ["*.pyi", "py.typed"]},
     include_package_data=True,
     packages=["asyncio_dgram"],
-    python_requires=">=3.5",
+    python_requires=">=3.6",
     install_requires=readfile("requirements.txt").split(),
     extras_require={"test": readfile("requirements-test.txt").split()},
     **extra_options,
