@@ -1,3 +1,6 @@
+next:
+	- Support for python 3.5 dropped.
+
 2.1.2:
 	- Do not default to AF_UNIX under windows.  Thanks to jmarcet.
 	  https://github.com/jsbronder/asyncio-dgram/pull/12
